--- a/funk/Gemfile
+++ b/funk/Gemfile
@@ -3,6 +3,10 @@ source "https://rubygems.org"
 gem "sinatra"
 gem "puma"
 
+gem "kontena-cli", "1.2.2"
+gem "kommando"
+
 group :development do
+  gem "pry-byebug"
   gem "sinatra-contrib"
 end
