--- a/funk/Gemfile
+++ b/funk/Gemfile
@@ -3,8 +3,8 @@ source "https://rubygems.org"
 gem "sinatra"
 gem "puma"
 
-gem "kontena-cli", "1.2.2"
-gem "kommando"
+gem "kontena-cli", "1.3.1"
+gem "kommando", "0.1.2"
 
 group :development do
   gem "pry-byebug"
